[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/IntroSequence.gd" type="Script" id=2]

[node name="IntroSequence" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="UI" parent="." instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_right = 600.0

[node name="UI2" parent="." instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -600.0
margin_right = 0.0
textsound = false

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer1" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="Timer4" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Timer5" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="Timer6" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="Timer7" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="Timer8" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer1" to="." method="_on_Timer1_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="Timer5" to="." method="_on_Timer5_timeout"]
[connection signal="timeout" from="Timer6" to="." method="_on_Timer6_timeout"]
[connection signal="timeout" from="Timer7" to="." method="_on_Timer7_timeout"]
[connection signal="timeout" from="Timer8" to="." method="_on_Timer8_timeout"]
